# haskell-time-series

./: .gitignore  LICENSE  README.md  Test.hs  haskell-time-series.cabal
app/: Main.hs
src/: Lib.hs
src/Data/: Series.hs
