name:                haskell-time-series
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/pquant/haskell-time-series#readme
license:             BSD3
license-file:        LICENSE
author:              Pierre Caillaud
maintainer:          pquant@hotmail.fr
copyright:           value
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Series
  build-depends:       base >= 4.7 && < 5, hourglass==0.2.10, containers==0.5.6.2
  default-language:    Haskell2010

executable haskell-time-series-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, haskell-time-series, hourglass==0.2.10
  default-language:    Haskell2010

test-suite haskell-time-series-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-time-series
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pquant/haskell-time-series
